# seeneva-reader-android

./: .actrc  .editorconfig  .gitignore  .gitmodules  .tool-versions  Gemfile  PRIVACY.md  README-ru.md  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  hacked ndroid phones  rust-toolchain  seeneva.properties  settings.gradle.kts
app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidDebug/res/values/: strings.xml
app/src/androidDebug/resources/: tinylog.properties
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/assets/license/: GPL-3.0-or-later.html
app/src/androidMain/res/color/: app_control_highlight.xml  comic_list_foreground.xml
app/src/androidMain/res/drawable/: balloon_error_txt.xml  bcg_completed.xml  bcg_preview_number.xml  bcg_search_view.xml  bcg_viewer_err_frame.xml  bcg_viewer_err_label.xml  comic_filter.xml  divider_horizontal.xml  ic_about_foreground.xml  ic_balloon_error.xml  ic_round_completed_18dp.xml  ic_round_home_24.xml  ic_round_remove_24dp.xml  ic_round_search_24dp.xml  ic_round_settings_24.xml  ic_whale_simple.xml  viewer_helper_indicator.xml
app/src/androidMain/res/drawable-ru/: balloon_error_txt.xml
app/src/androidMain/res/drawable-v21/: bcg_comic_filter.xml  bcg_draggable_bottom_sheet.xml
app/src/androidMain/res/drawable-v24/: ic_launcher_foreground.xml
app/src/androidMain/res/layout/: activity_book_viewer.xml  activity_main.xml  activity_third_parties.xml  dialog_add_mode_selector.xml  dialog_comic_filters.xml  dialog_comic_list_radio_buttons.xml  dialog_comic_rename.xml  dialog_license.xml  dialog_viewer_settings.xml  fragment_about_app.xml  fragment_comic_info.xml  fragment_comic_list.xml  fragment_viewer_help.xml  fragment_viewer_page.xml  layout_about_card.xml  layout_add_mode_item.xml  layout_comic_filter.xml  layout_comic_grid_thumb_cover.xml  layout_comic_info_group.xml  layout_comic_info_item.xml  layout_comic_list_thumb_cover.xml  layout_fullscreen_message.xml  layout_fullscreen_progress.xml  layout_main_search.xml  layout_radio_item.xml  layout_viewer_states.xml  vh_comic_filter.xml  vh_comic_grid.xml  vh_comic_grid_placeholder.xml  vh_comic_list.xml  (+5 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: config_buf_generated.h  input.h  native-lib.cpp  output.h  t.h
app/src/main/resources/: tinylog.properties
app/src/main/rs/: comix_page_prepare.rs  prediction.rs
app/src/release/resources/: tinylog.properties
comix_tensors/: .gitignore  CMakeLists.txt  Cargo.toml  android_runner.sh
comix_tensors/.cargo/: config
comix_tensors/build-helper/: Cargo.toml
comix_tensors/build-helper/src/: lib.rs
comix_tensors/file-descriptor/: Cargo.toml
comix_tensors/file-descriptor/src/: lib.rs
comix_tensors/leptonica-rs/: Cargo.toml
comix_tensors/leptonica-rs/src/: error.rs  helper.rs  lib.rs  wrappers.rs
comix_tensors/leptonica-rs/src/functions/: adaptmap.rs  bilateral.rs  binarize.rs  colorspace.rs  convolve.rs  edge.rs  enhance.rs  graymorph.rs  grayquant.rs  mod.rs  morph.rs  pixconv.rs  scale1.rs
comix_tensors/leptonica-sys/: Cargo.toml  build.rs  wrapper.h
comix_tensors/leptonica-sys/extra/: extraapi.c  extraapi.h
comix_tensors/leptonica-sys/src/: lib.rs
comix_tensors/libarchive-rs/: Cargo.toml
comix_tensors/libarchive-rs/src/: archive.rs  entry.rs  error.rs  lib.rs
comix_tensors/libarchive-sys/: Cargo.toml  build.rs  wrapper.h
comix_tensors/libarchive-sys/src/: ffi.rs
comix_tensors/lzma-sdk-sys/: Cargo.toml  build.rs
comix_tensors/lzma-sdk-sys/src/: lib.rs
comix_tensors/scripts/: adb_prepare_test_data.sh  adb_push_lldb_server.sh  android_runner.sh  attach_android_debugger.sh
comix_tensors/src/: future_runtime.rs  lib.rs  task.rs  utils.rs
comix_tensors/src/android/: mod.rs  model_config.rs  ndk.rs
comix_tensors/src/android/jni_app/: callback.rs  constants.rs  mod.rs  throwable.rs  utils.rs
comix_tensors/src/android/ndk/: mod.rs
comix_tensors/src/android/tasks/: error.rs  mod.rs
comix_tensors/src/comics/: mod.rs
comix_tensors/src/comics/actions/: mod.rs
comix_tensors/src/comics/archive/: error.rs  mod.rs
comix_tensors/src/comics/container/: error.rs  mod.rs
comix_tensors/src/comics/magic/: error.rs  mod.rs
comix_tensors/src/comics/ml/: mod.rs  utils.rs  yolo.rs
comix_tensors/src/futures_ext/: cancel.rs  error_listener.rs  error_sender.rs  mod.rs
comix_tensors/src/io/: fd.rs
comix_tensors/src/ml/: mod.rs
comix_tensors/src/ml/model_config/: mod.rs  model_config_generated.rs
comix_tensors/src/ml/prediction/: mod.rs  parser.rs
comix_tensors/tesseract-rs/: Cargo.toml
comix_tensors/tesseract-rs/src/: error.rs  lib.rs  wrappers.rs
comix_tensors/tesseract-sys/: Cargo.toml  build.rs  wrapper.h
comix_tensors/tesseract-sys/extra/: extraapi.cpp  extraapi.h
comix_tensors/tesseract-sys/src/: lib.rs
comix_tensors/test/: ComicInfo.xml
comix_tensors/tflite-rs/: Cargo.toml
comix_tensors/tflite-rs/src/: error.rs  lib.rs  pointer.rs
comix_tensors/tflite-sys/: .gitignore  Cargo.toml  build.rs
comix_tensors/unrar-rs/: Cargo.toml
comix_tensors/unrar-rs/src/: lib.rs
comix_tensors/unrar-sdk-sys/: Cargo.toml  build.rs  description.txt
comix_tensors/unrar-sdk-sys/src/: lib.rs
comix_tensors/unrar-sys/: Cargo.toml  build.rs
comix_tensors/xz-sys/: Cargo.toml  build.rs
ml/: stats.py  (+7 more)
native/: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  rustfmt.toml
native/.cargo/: config
native/scripts/: adb_prepare_test_data.sh  adb_push_lldb_server.sh  android_runner.sh  attach_android_debugger.sh
native/src/: lib.rs  task.rs  utils.rs
native/src/android/: mod.rs
native/src/android/jni_app/: callback.rs  constants.rs  mod.rs  throwable.rs
native/src/android/ndk/: mod.rs
native/src/android/tasks/: mod.rs
native/src/comics/: mod.rs
native/src/comics/actions/: mod.rs
native/src/comics/container/: error.rs  mod.rs
native/src/comics/magic/: mod.rs
native/src/comics/ml/: mod.rs  utils.rs  yolo.rs
native/test/: ComicInfo.xml
native/test/archive/7z/: comics_test.cb7
(+1059 files in other folders)
