[package]
name = "comix_tensors"
version = "0.1.0"
authors = ["Sergey Solodovnikov <elementa.ru@gmail.com>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.11"
android_logger = "0.7"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
log = "0.4"
flatbuffers = "0.5"
ndarray = "0.12"
num-traits = "0.2"
itertools = "0.8"
zip = "0.5"
tar = "0.4"
image = "0.21"
quick-xml = "0.13"
lazy_static = "1.3"
byteorder = "1"
futures = "0.1"
tokio = "0.1"
#tokio-threadpool = "0.1"
#futures-cpupool = "0.1.0"
futures-locks = {version="0.3", feature="tokio"}
memmap = "0.7"
lzma-sdk-sys = {path = "lzma-sdk-sys"}
unrar-sdk-sys = {path = "unrar-sdk-sys"}