[package]
name = "comix_tensors"
version = "0.1.0"
authors = ["Sergey Solodovnikov <elementa.ru@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
#panic = "abort"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = "0.14.0"
android_logger = "0.8.6"

[dependencies]
libc = "0.2.67"
log = "0.4.8"
#flatbuffers = "0.6"
#ndarray = "0.12"
num-traits = "0.2.11"
itertools = "0.8.2"
lopdf = "0.24.0"
image = "0.23.0"
quick-xml = "0.17.2"
#byteorder = "1"
futures = "0.1"
tokio = "0.1"
once_cell = "1.3.1"
blake2 = "0.8.1"
#tokio-threadpool = "0.1"
#futures-cpupool = "0.1.0"
futures-locks = {version="0.4", feature="tokio"}
libarchive-rs = {path = "libarchive-rs"}