[package]
name = "seeneva"
version = "0.1.0"
authors = ["Sergei Solodovnikov <sergei@isolo.me>"]
license = "GPL-3.0-or-later"
edition = "2018"

[profile.release]
opt-level = "s"
panic = "abort"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = "0.18.0"
android_logger = "0.9.2"

[target.'cfg(target_family="unix")'.dependencies]
file-descriptor = { git = "https://github.com/Seeneva/file-descriptor-rs.git", branch = "main" }

[dependencies]
threadpool = "1.0"
crossbeam-channel = "0.5.0"
parking_lot = "0.11.1"
thiserror = "1.0"
enum_dispatch = "0.3"
libc = "0.2"
log = "0.4.13"
num_cpus = "1.0"
rayon = "1.5.0"
ndarray = { version = "0.14.0", features = ["rayon"] }
num-traits = "0.2.14"
itertools = "0.9.0"
lopdf = "0.26.0"
image = "0.23"
quick-xml = "0.20.0"
once_cell = "1.4.1"
blake2 = "0.9.0"
tesseract-rs = { git = "https://github.com/Seeneva/tesseract-rs.git", branch = "main" }
libarchive-rs = { git = "https://github.com/Seeneva/libarchive-rs.git", branch = "main" }
tflite-rs = { git = "https://github.com/Seeneva/tflite-rs.git", branch = "main" }

[features]
tflite_with_gpu = ["tflite-rs/with_gpu"]
tflite_with_mmap = ["tflite-rs/with_mmap"]
tflite_with_ruy = ["tflite-rs/with_ruy"]
#Enable debug logs
debug_logs = []
