[package]
name = "libarchive-rs"
version = "0.1.0"
authors = ["Sergey Solodovnikov <elementa.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
once_cell = "1.3.1"
libarchive-sys = {path = "../libarchive-sys"}