[package]
name = "libarchive-rs"
version = "0.1.0"
authors = ["Sergey Solodovnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family="unix")'.dependencies]
file-descriptor = { path = "../file-descriptor" }

[dependencies]
thiserror = "1.0"
libc = "0.2"
libarchive-sys = { path = "../libarchive-sys" }