[package]
name = "libarchive-sys"
version = "3.4.3"
authors = ["Sergey Solodovnikov"]
edition = "2018"
links = "archive"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
libc = "0.2"
xz-sys = {path = "../xz-sys"}

[build-dependencies]
pkg-config = "0.3"
build-deps = "0.1"
bindgen = "0.55"
cmake = "0.1"
build-helper = { path = "../build-helper" }