[package]
name = "tesseract-rs"
version = "0.1.0"
authors = ["Sergey Solodovnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tesseract-sys = { path = "../tesseract-sys" }
leptonica-rs = { path = "../leptonica-rs" }