[package]
name = "tflite-rs"
version = "0.1.0"
authors = ["Sergey Solodovnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tflite-sys = { path = "../tflite-sys" }

[features]
with_nnapi = ["tflite-sys/with_nnapi"]
with_mmap = ["tflite-sys/with_mmap"]
with_ruy = ["tflite-sys/with_ruy"]
with_gpu = ["tflite-sys/with_gpu"]