[package]
name = "unrar-rs"
version = "0.1.0"
authors = ["Sergey Solodovnikov <elementa.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.67"
num-traits = "0.2.11"
num-derive = "0.3.0"
unrar-sys = {path = "../unrar-sys"}
